--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -11,7 +11,9 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme"
+        android:largeHeap="true"
+         >
         
         <activity android:name="com.pyconindia.pycon.SplashActivity" >
             <intent-filter>
