--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -8,6 +8,7 @@
         android:targetSdkVersion="21" />
 <uses-permission android:name="android.permission.INTERNET"/>
 <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
+<uses-permission android:name="android.permission.WAKE_LOCK"/>
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
@@ -46,6 +47,10 @@
         <activity android:name="com.pyconindia.pycon.ScheduleActivity" >
             
         </activity>
+        <receiver android:enabled="true"
+		          android:exported="false"
+		          android:name="com.pyconindia.pycon.receivers.AlarmReceiver" >
+        </receiver>
     </application>
 
 </manifest>
